--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Website</title>
+    <title>Shawlen Nahar</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -36,6 +36,9 @@
           <li class="navbar__item">
             <a href="#skills" class="navbar__links">Skills</a>
           </li>
+          <li class="navbar__item">
+            <a href="#services" class="navbar__links">Services</a>
+          </li>
           <li class="navbar__btn">
             <a href="#contact" class="button">Contact Me</a>
           </li>
@@ -55,7 +58,7 @@
           </p>
           <button class="main__btn">
             <a
-              href="resume/Shawlen Resume Gen.pdf"
+              href="resume/Shawlen Nahar - G- Resume.docx.pdf"
               target="_blank"
               rel="noopener noreferrer"
               >Resume</a
@@ -250,6 +253,26 @@
 </section> 
 
 
+<!--My Services Section-->
+
+<section id="services" class="services-section">
+  <h2 class="section-title">My Services</h2>
+  <div class="services-grid">
+    <div class="service-card">Website Development<br>(HTML, CSS, JavaScript, WordPress)</div>
+    <div class="service-card">IT Support & Consulting</div>
+    <div class="service-card">Custom Web Dashboards</div>
+    <div class="service-card">Remote IT Helpdesk</div>
+    <div class="service-card">UI/UX Wireframing (Figma)</div>
+    <div class="service-card">Tech Training & Documentation</div>
+  </div>
+  <p class="alphet-call">
+    <br>
+    Interested in working with an experienced and reliable team?<br>
+    Contact <a href="https://www.alphet.net/" target="_blank"><strong>Alphet</strong></a> — our tech consulting firm — for the best results.
+  </p>
+</section>
+
+
 
     <!--Contact Me Section-->
     <section id="contact">
@@ -278,7 +301,7 @@
 
     <!-- Footer Section -->
     <div class="footer__container">
-      
+
       <section class="social__media">
         <div class="social__media--wrap">
           <div class="footer__logo">
@@ -287,7 +310,7 @@
             >
           </div>
           <p class="website__rights">
-            © Shawlen Nahar 2025. All rights reserved
+            © Made with <i class="fa-solid fa-heart" style="color: #ad0000;"></i> by Shawlen 2025. All rights reserved
           </p>
           <div class="social__icons">
             <a
